--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "^1.6.1",
     "express": "^4.13.4",
     "jade": "^1.11.0",
-    "mysql": "^2.10.2"
+    "mysql": "^2.10.2",
+    "restify": "^4.0.4"
   }
 }
