--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
     "compression": "^1.6.1",
-    "express": "^4.13.4",
-    "jade": "^1.11.0",
+    "config": "^1.20.1",
+    "fs": "0.0.2",
     "mysql": "^2.10.2",
-    "restify": "^4.0.4"
+    "restify": "^4.0.4",
+    "restify-router": "^0.2.1"
   }
 }
