--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Zahlii/MTP-Influenza-Node#readme",
   "dependencies": {
+    "ajv": "^4.0.5",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
     "compression": "^1.6.1",
