--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "mtp_influenza_node",
-  "version": "1.0.0",
-  "description": "Node js backend for the Master team project at University Mannheim",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Zahlii/MTP-Influenza-Node.git"
-  },
-  "author": "Uni Mannheim",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Zahlii/MTP-Influenza-Node/issues"
-  },
-  "homepage": "https://github.com/Zahlii/MTP-Influenza-Node#readme",
-  "dependencies": {
-    "ajv": "^4.0.5",
-    "body-parser": "^1.15.0",
-    "bunyan": "^1.8.1",
-    "compression": "^1.6.1",
-    "config": "^1.20.1",
-    "fs": "0.0.2",
-    "mysql": "^2.10.2",
-    "restify": "^4.0.4",
-    "restify-router": "^0.2.1"
-  }
+    "name": "mtp_influenza_node",
+    "engines": {
+        "node": "4.4.4"
+    },
+    "version": "1.0.0",
+    "description": "Node js backend for the Master team project at University Mannheim",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Zahlii/MTP-Influenza-Node.git"
+    },
+    "author": "Uni Mannheim",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Zahlii/MTP-Influenza-Node/issues"
+    },
+    "homepage": "https://github.com/Zahlii/MTP-Influenza-Node#readme",
+    "dependencies": {
+        "ajv": "^4.0.5",
+        "body-parser": "^1.15.0",
+        "bunyan": "^1.8.1",
+        "compression": "^1.6.1",
+        "config": "^1.20.1",
+        "fs": "0.0.2",
+        "mysql": "^2.10.2",
+        "restify": "^4.0.4",
+        "restify-router": "^0.2.1"
+    }
 }
