--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bunyan": "^1.8.1",
     "compression": "^1.6.1",
     "config": "^1.20.1",
+    "fbgraph": "^1.2.0",
     "fs": "0.0.2",
     "mongoose": "^4.5.3",
     "mysql": "^2.10.2",
