--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Zahlii/MTP-Influenza-Node#readme",
   "dependencies": {
+    "apnagent": "^1.1.3",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
     "compression": "^1.6.1",
