--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^4.5.3",
     "mysql": "^2.10.2",
     "restify": "^4.0.4",
-    "restify-router": "^0.2.1"
+    "restify-router": "^0.2.1",
+    "threads": "^0.7.0"
   }
 }
