--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Zahlii/MTP-Influenza-Node#readme",
   "dependencies": {
     "apnagent": "^1.1.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
     "compression": "^1.6.1",
