--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs": "0.0.2",
     "mongoose": "^4.5.3",
     "mysql": "^2.10.2",
+    "request": "^2.74.0",
     "restify": "^4.0.4",
     "restify-router": "^0.2.1",
     "threads": "^0.7.0"
