Keymetrics monitoring integration, working on both localhost and development machine now

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql": "^2.10.2",
     "on-finished": "^2.3.0",
     "optimist": "^0.6.1",
+    "pmx": "^0.6.5",
     "raven": "^0.12.1",
     "request": "^2.74.0",
     "response-time": "^2.3.1",
