--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "url": "https://github.com/Zahlii/MTP-Influenza-Node/issues"
   },
   "config": {
-    "port" : 27016,
-    "ip" : "127.0.0.1"
+    "port": 27016,
+    "ip": "127.0.0.1"
   },
   "homepage": "https://github.com/Zahlii/MTP-Influenza-Node#readme",
   "dependencies": {
@@ -28,6 +28,8 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
+    "color-convert" : "0.2.x",
+    "canvas" : "^1.5.0",
     "compression": "^1.6.1",
     "config": "^1.20.1",
     "fbgraph": "^1.2.0",
