--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
-    "color-convert" : "0.2.x",
-    "canvas" : "^1.5.0",
+    "canvas": "^1.5.0",
+    "color-convert": "0.2.x",
     "compression": "^1.6.1",
     "config": "^1.20.1",
     "fbgraph": "^1.2.0",
@@ -44,6 +44,7 @@
     "response-time": "^2.3.1",
     "restify": "^4.0.4",
     "restify-router": "^0.2.1",
+    "sphericalmercator": "^1.0.5",
     "threads": "^0.7.0"
   }
 }
