--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mtp_influenza_node",
   "engines": {
-    "node": ">4.4.4"
+    "node": "^4.4.4"
   },
   "version": "1.0.0",
   "description": "Node js backend for the Master team project at University Mannheim",
@@ -28,14 +28,12 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
-    "canvas": "^1.5.0",
     "color-convert": "0.2.x",
     "compression": "^1.6.1",
     "config": "^1.20.1",
     "fbgraph": "^1.2.0",
     "fs": "0.0.2",
     "mongoose": "^4.5.3",
-    "mysql": "^2.10.2",
     "on-finished": "^2.3.0",
     "optimist": "^0.6.1",
     "pmx": "^0.6.5",
