--- a/package.json
+++ b/package.json
@@ -18,17 +18,13 @@
   "bugs": {
     "url": "https://github.com/Zahlii/MTP-Influenza-Node/issues"
   },
-  "config": {
-    "port": 27016,
-    "ip": "127.0.0.1"
-  },
   "homepage": "https://github.com/Zahlii/MTP-Influenza-Node#readme",
   "dependencies": {
     "apnagent": "^1.1.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
-    "canvas": "^1.5.0",
+    "canvas-prebuilt": "^1.5.0",
     "color-convert": "0.2.x",
     "compression": "^1.6.1",
     "config": "^1.20.1",
