--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "apnagent": "^1.1.3",
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.1",
     "canvas-prebuilt": "^1.5.0",
