--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "config": "^1.20.1",
     "fbgraph": "^1.2.0",
     "fs": "0.0.2",
+    "http-proxy": "^1.15.2",
+    "http-proxy-rules": "^1.0.1",
     "i18n": "^0.8.3",
     "mongoose": "^4.5.3",
     "mysql": "^2.10.2",
